# haskell-futurice-site

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  error.html  haskell-futurice-site.cabal  index.tmpl.html
scripts/: build-cabal-nightly.sh  haskell-on-macos.py
src/: Site.hs
