cabal-version:       2.0
name:                haskell-futurice-site
version:             0
synopsis:            Script generator for Futurice + Haskell site
description:
  This script generates the haskell.futurice.com site
homepage:            https://github.com/futurice/haskell-futurice-site
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
category:            Development
build-type:          Simple
tested-with:         GHC==8.2.2, GHC==8.4.3

source-repository head
  type: git
  location: https://github.com/futurice/haskell-futurice-site

executable generate-site
  main-is:             Site.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
    base              >=4.10.0.0   && <4.12,
    aeson             >=1.3.0.0    && <1.4,
    bytestring        >=0.10.8.2   && <0.11,
    directory         >=1.3.0.2    && <1.4,
    microstache       >=1.0.1.1    && <1.1,
    process           >=1.6.1.0    && <1.7,
    regex-applicative >=0.3.3      && <0.4,
    shake             >=0.16.3     && <0.17,
    text              >=1.2.2.2    && <1.3
